# crazyflie_swarm

./: CMakeLists.txt  README.md  commander.cpp  crazyflie_add.cpp  crazyflie_server.cpp  swarm_controller.cpp  swarm_linker.cpp
crazyflie_cpp/include/crazyflie_cpp/: Crazyflie.h  Crazyradio.h
crazyflie_cpp/src/: Crazyflie.cpp  Crazyradio.cpp
crazyflie_driver/: CMakeLists.txt  package.xml
crazyflie_driver/launch/: crazyflie_add.launch  swarm_cf.launch
crazyflie_driver/msg/: Att_est.msg  Yaw_est.msg  num_vehiclepub.msg
crazyflie_driver/src/: crazyflie_add.cpp  crazyflie_server.cpp
crazyflie_driver/srv/: AddCrazyflie.srv
easyfly/: CMakeLists.txt  package.xml  swarm_controller.cpp
easyfly/include/: Controller_pseuDecentrolized.h  IIR.cpp  attitude_estimation.h  basic_types.h  commons.h  control.cpp  control.h  control_modified.h  gl_declair.cpp  swarmVel_filter.h  type_methode.cpp  type_methode.h
easyfly/launch/: 1joy2flies.launch  communication_test.launch  swarm1.launch  swarm1_test.launch  swarm_cf.launch  vicon_test.launch
easyfly/msg/: Recording.msg  att_est.msg  pos_ctrl_sp.msg  pos_est.msg  pos_est_test.msg  vicon_markernum.msg
easyfly/scripts/: State_learning.py
easyfly/src/: commander.cpp  commander_test.cpp  communication_test.cpp  controller.cpp  linker.cpp  swarm_Server.cpp  swarm_Server_Decentralized.cpp  swarm_Server_pseudo_Decentralized.cpp  swarm_controller.cpp  swarm_controller_pseudo_Decentralized.cpp  swarm_linker.cpp  vicon_tracker.cpp
easyfly/srv/: Learning.srv
include/: IIR.cpp  IIR.h  attitude_estimation.h  basic_types.h  control.h  pid.h  type_methode.cpp  type_methode.h
msg/: pos_ctrl_sp.msg
